manifests/05-snmp-exporter-custom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snmp-exporter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snmp-exporter
  template:
    metadata:
      labels:
        app: snmp-exporter
    spec:
      imagePullSecrets:
      - name: docker-hub-secret
      containers:
      - name: snmp-exporter
        image: mqmqmqmq/cours:exporter
        ports:
        - containerPort: 9116
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
